--- a/package.json
+++ b/package.json
@@ -35,15 +35,18 @@
         "webpack-dev-server": "^3.1.5"
     },
     "dependencies": {
+        "@material-ui/core": "^1.4.3",
         "autobind-decorator": "^2.1.0",
         "babel-polyfill": "^6.26.0",
         "connected-react-router": "^4.3.0",
         "history": "^4.7.2",
         "react": "^16.4.2",
         "react-dom": "^16.4.2",
+        "react-redux": "^5.0.7",
         "react-router-dom": "^4.3.1",
         "redux": "^4.0.0",
         "redux-thunk": "^2.3.0",
+        "typeface-roboto": "^0.0.54",
         "whatwg-fetch": "^2.0.4"
     }
 }
