--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
         "@material-ui/core": "^1.4.3",
         "autobind-decorator": "^2.1.0",
         "babel-polyfill": "^6.26.0",
+        "classnames": "^2.2.6",
         "connected-react-router": "^4.3.0",
         "history": "^4.7.2",
         "react": "^16.4.2",
         "react-dom": "^16.4.2",
         "react-redux": "^5.0.7",
         "react-router-dom": "^4.3.1",
+        "react-transition-group": "^2.4.0",
         "redux": "^4.0.0",
         "redux-thunk": "^2.3.0",
         "typeface-roboto": "^0.0.54",
